[workspace]
resolver = "2"
members = ["lib", "lib/tree", "problem/*/*/*/*/*/*"]

[workspace.dependencies]
proconio = "0.5"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
num-rational = "0.4"
num-complex = "0.4"
num-derive = "0.4"
itertools = "0.3"
rustc-hash = "1.1"
superslice = "1.0"
ordered-float = "3.7"
petgraph = "0.6"
indexmap = "2.0"
rand = "0.8"
rand_chacha = "0.3"
regex = "1.9"
ndarray = "0.15"
permutohedron = "0.2"
bitvec = "1.0"
smallvec = "1.11"
ac-library-rs = "0.1"
once_cell = "1.18"
lazy_static = "1.4"
ascii = "1.1"
fixedbitset = "0.4"
either = "1.8"
im-rc = "15.1"
counter = "0.5"
hashbag = "0.1"
multimap = "0.9"
pathfinding = "4.3"
bstr = "1.6"
az = "1.2"
tap = "1.0"
easy-ext = "1.0"
ac-lib = { path = "lib" }